--- a/assessment.html
+++ b/assessment.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello World</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato: 100,300,400,700|Luckiest+Guy|Oxygen:300,400" rel="stylesheet">
-<link href="style.css" type="text/css" rel="stylesheet">
+    <title>HTML Assessment</title>
   </head>
   <body>
     <<h2>Text</h2>
@@ -26,12 +24,9 @@
 
     <h2>Table</h2>
     <table>
-      <caption>Game Summary</caption>
+      <caption>Scores by Quarter</caption>
       <thead>
         <tbody>
-          <<tr>
-            <th>Scores by Quarter</th>
-          </tr>
           <tr>
             <th>Team Name</th>
             <td> First<br>Q1</td>
@@ -50,24 +45,55 @@
           <td>7</td>
           <td>17</td>
           </tr>
+        <tr>
+          <th>Chicago</th>
+          <td>0</td>
+          <td>6</td>
+          <td>3</td>
+          <td>6</td>
+          <td>15</td>
+        </tr>
+        <tr>
+          <th>Total</th>
+          <td>7</td>
+          <td>9</td>
+          <td>3</td>
+          <td>13</td>
+          <td>32</td>
+        </tr>
       </table>
 
-    <p>Score by quarter <br>
-
-    </p>
     <h2>List</h2>
+    <ul>
+      <img src=""/>
+      <li>Denver Broncos</li>
+    <ul>
+      <li>Coach: Gary Kubiak</li>
+      <li>QB</li>
+      <ol>
+        <li>Brock Osweiler</li>
+        <li>Trevor Siemian</li>
+        <li>Peyton Manning (injured)</li>
+      </ol>
+    </ul>
+    <li>Chicaco Bears</li>
+    <ul>
+      <li>Coach: Gary Kubiak</li>
+      <li>QB</li>
+      <ol>
+        <li>Jay Cutlet</li>
+        <li>David Foles</li>
+      </ol>
+    </ul>
+    </ul>
 
     <h2>Form</h2>
-
-    <form action="helloWorld.html">
-      <input type="text" name="firstName" placeholder="First Name">
+    <form action="assesment.html">
+      <p>First:<input type="text" name="firstName" placeholder="First Name">
+        Last:<input type="text" name="lastName" placeholder="Last Name"></p>
+        <p>Favorite Sport:<br><input type="radio" name="" value=""></p>
       <input type="submit" value="Submit">
       </form>
-      <h2> Second Form </h2>
-        <form class="" action="helloWorld.html" method="post">
-          <input type="date" name="" value=""> <br>
-          <input type="password" name="" placeholder="Password"> <<br>
-          <input type="submit" value="Submit"> <<br>
-        </form>
+
   </body>
 </html>
