--- a/assessment.html
+++ b/assessment.html
@@ -29,11 +29,11 @@
         <tbody>
           <tr>
             <th>Team Name</th>
-            <td> First<br>Q1</td>
-            <td>Half |<br>Q2</td>
-            <td>Second<br>Q3</td>
-            <td>Half<br>Q4</td>
-            <td>Final</td>
+            <th> First<br>Q1</th>
+            <th>Half |<br>Q2</th>
+            <th>Second<br>Q3</th>
+            <th>Half<br>Q4</th>
+            <th>Final</th>
           </tr>
         </tbody>
       </thead>
@@ -53,20 +53,20 @@
           <td>6</td>
           <td>15</td>
         </tr>
-        <tr>
+        <tfoot>
           <th>Total</th>
           <td>7</td>
           <td>9</td>
           <td>3</td>
           <td>13</td>
           <td>32</td>
-        </tr>
+        </tfoot>
       </table>
 
     <h2>List</h2>
     <ul>
-      <img src=""/>
-      <li>Denver Broncos</li>
+      <img src="/Users/noelcastillo/SD/HTML/images/broncoslogo.jpg" width="175" height="125">
+      <a href="https://www.denverbroncos.com/" target="_blank"><li>Denver Broncos</li></a>
     <ul>
       <li>Coach: Gary Kubiak</li>
       <li>QB</li>
@@ -76,7 +76,8 @@
         <li>Peyton Manning (injured)</li>
       </ol>
     </ul>
-    <li>Chicaco Bears</li>
+    <img src="/Users/noelcastillo/SD/HTML/images/chicagobearslogo.jpg" width="125" height="125">
+    <a href="https://www.chicagobears.com/" target="_blank"><li>Chicaco Bears</li></a>
     <ul>
       <li>Coach: Gary Kubiak</li>
       <li>QB</li>
@@ -88,11 +89,34 @@
     </ul>
 
     <h2>Form</h2>
-    <form action="assesment.html">
+    <form action="./assesment.html">
       <p>First:<input type="text" name="firstName" placeholder="First Name">
         Last:<input type="text" name="lastName" placeholder="Last Name"></p>
-        <p>Favorite Sport:<br><input type="radio" name="" value=""></p>
-      <input type="submit" value="Submit">
+      <p>
+        Favorite Sport:<br>
+        <select name="sport">
+          <option>Soccer</option>
+          <option>Basketball</option>
+          <option>Football</option>
+          <option>Baseball</option>
+          <option>Hockey</option>
+        </select>
+      </p>
+
+      <p>I have:
+        <input type="checkbox">Attended
+        <input type="checkbox">Played
+        <input type="checkbox">Coached
+        <input type="checkbox">Bet on<br>
+        this sport.
+      </p>
+
+        <p>For this sport I prefer the:
+          <input type="radio" name="level">Amateur
+          <input type="radio" name="level">College
+          <input type="radio" name="level">Professional
+        </p>
+      <input type="submit" value="Submit Query">
       </form>
 
   </body>
