Completed major requirements. Need to work on formatting

--- a/assessment.html
+++ b/assessment.html
@@ -4,7 +4,7 @@
     <title>HTML Assessment</title>
   </head>
   <body>
-    <<h2>Text</h2>
+    <h2>Text</h2>
 
       <p><strong>Lorem</strong> ipsum dolor sit amet, consectetur adipiscing
         eli. Sed blandit, eros sit amet euismod tincidunt, nisl leo vestibulum
@@ -30,7 +30,7 @@
           <tr>
             <th>Team Name</th>
             <th> First<br>Q1</th>
-            <th>Half |<br>Q2</th>
+            <th>Half<br>Q2</th>
             <th>Second<br>Q3</th>
             <th>Half<br>Q4</th>
             <th>Final</th>
@@ -53,14 +53,14 @@
           <td>6</td>
           <td>15</td>
         </tr>
-        <tfoot>
+        <tr>
           <th>Total</th>
-          <td>7</td>
-          <td>9</td>
-          <td>3</td>
-          <td>13</td>
-          <td>32</td>
-        </tfoot>
+          <th>7</th>
+          <th>9</th>
+          <th>3</th>
+          <th>13</th>
+          <th>32</th>
+        </tr>
       </table>
 
     <h2>List</h2>
