--- a/assessment.html
+++ b/assessment.html
@@ -7,20 +7,21 @@
     <h2>Text</h2>
 
       <p><strong>Lorem</strong> ipsum dolor sit amet, consectetur adipiscing
-        eli. Sed blandit, eros sit amet euismod tincidunt, nisl leo vestibulum
-        dui, sed tin cidunt lacus ligula eu sapien. Proin at diam tincidunt,
-        tincidunt ex at, nevenati nisl.
+        eli. Sed <br> blandit, eros sit amet euismod tincidunt, nisl leo
+        vestibulum dui, sed <br> tin cidunt lacus ligula eu sapien. Proin at
+        diam tincidunt, tincidunt <br> ex at, nevenati nisl.
       </p>
 
-      <p><strong>Integer</strong> auctor est ac fringilla euismod. Donec laoreet
-        urna vel diam blandit venenatis. Nam fermentum turpis a mauris
-        condimentum, vitae faucibus leo commodo.
-      </p>
+        <p>&nbsp&nbsp&nbsp&nbsp <em><strong>Integer</strong> auctor est ac
+        fringilla euismod. Donec laoreet <br> &nbsp&nbsp&nbsp&nbsp urna vel diam
+        blandit venenatis. Nam fermentum turpis a <br> &nbsp&nbsp&nbsp&nbsp
+        mauris condimentum, vitae faucibus leo commodo.</em>
+        </p>
 
-      <p><strong>Vestibulum</strong> elit nisi, posuere ut hendrerit a, molestie eu leo.
-        Donec sit amet ullamcorper turpis. Mauris eu tellus blandit turpis
-        fermentum dapibus eget sed ex. Vivamus auctor in velit ac suscipit. In
-        hac habitasse platea dictumst.
+      <p><strong>Vestibulum</strong> elit nisi, posuere ut hendrerit a, molestie
+        eu leo. Donec <br> sit amet ullamcorper turpis. Mauris eu tellus blandit
+        turpis <br> fermentum dapibus eget sed ex. Vivamus auctor in velit ac
+        suscipit. <br> In hac habitasse platea dictumst.
 
     <h2>Table</h2>
     <table>
