Fixed submit form error

--- a/assessment.html
+++ b/assessment.html
@@ -90,9 +90,12 @@
     </ul>
 
     <h2>Form</h2>
-    <form action="./assesment.html">
-      <p>First:<input type="text" name="firstName" placeholder="First Name">
-        Last:<input type="text" name="lastName" placeholder="Last Name"></p>
+    <form>
+      <p>
+        First:<input type="text" name="firstName" placeholder="First Name">
+        Last:<input type="text" name="lastName" placeholder="Last Name">
+      </p>
+
       <p>
         Favorite Sport:<br>
         <select name="sport">
@@ -117,7 +120,9 @@
           <input type="radio" name="level">College
           <input type="radio" name="level">Professional
         </p>
+
       <input type="submit" value="Submit Query">
+
       </form>
 
   </body>
